src/views/styles/layout.scss
.v-application {
    // color: #344767!important;
    background: rgb(var(--theme-background)) !important;
    .layout_navigation {
        border-radius: 12px;
        margin: 16px 0 16px 16px !important;
        overflow: hidden;
        height: calc(100vh - 2rem) !important;
        .v-list-item__prepend > .v-icon, .v-list-item__append > .v-icon {
            opacity: 1 !important;
        }
        .v-list-item__prepend {
            width: 40px;
        }
        .v-list-item-title {
            font-size: 14px;
            font-weight: 500;
            // color: #ffffff;
            opacity: 1;
            .link {
                color: inherit;
            }
        }
        .v-list-group__items {
            .v-list-item {
                padding-inline-start: 47px !important;
            }
            .v-list-item--active {
                // background-color: rgb(var(--v-theme-primary));
            }
        }
        .v-icon {
            font-size: 24px !important;
        }
        .logo {
            .v-avatar {
                border-radius: 0;
            }
            .v-list-item__content {
                // margin-left: 30px;
                .title {
                    margin-top: 4px;
                    font-size: 18px;
                    font-weight: 700;
                }
                .v-list-item-subtitle {
                    margin-top: 4px;
                }
            }
            .v-list-item__prepend {
                width: auto;
                padding-left: 0;
            }
        }
    }
    .app_main {
        flex: 1;
        margin-left: 288px;
        padding-right: 16px;
        transition: all 0.2s;
        margin-top: 92px;
        .header {
            // background: ;
            background: rgba(var(--header-bg), 0.8);
            // filter: blur(25px);
            backdrop-filter: saturate(200%) blur(30px);
            // box-shadow: inset 0 0 1px 1px hsla(0,0%,99.6%,.9),0 20px 27px 0 rgba(0,0,0,.05)!important;
            height: 76px;
            transition: all 0.2s;
            display: flex;
            align-items: center;
            border-radius: 10px;
            position: fixed;
            top: 16px;
            left: 288px;
            width: calc(100vw - 312px);
            z-index: 2;

            .header_title {
                .v-breadcrumbs {
                    padding: 0 !important;
                    .imglogo {
                        height: 22px;
                    }
                    .v-breadcrumbs-item--disabled {
                        opacity: 0.6;
                    }
                    .v-breadcrumbs-item {
                        font-weight: 500;
                    }
                    .v-breadcrumbs-divider {
                        // color: rgb(204, 204, 204);
                        opacity: 0.6;
                        padding: 0;
                    }
                    .v-breadcrumbs__prepend {
                        opacity: 0.6;
                        .v-icon {
                            margin-left: 5px;
                            // width: 5px;
                        }
                        // width: 25px;
                    }
                    .link {
                        color: inherit;
                    }
                }
                .page_title {
                    margin-top: 8px;
                    font-size: 16px;
                    font-weight: 700;
                }
            }
            .gamepad {
                cursor: pointer;
                align-self: flex-start;
                position: relative;
                z-index: 2;
            }
            .search_ip {
                position: relative;
                z-index: 2;
                .v-field--variant-solo {
                    box-shadow: none;
                }
            }
            .tool_btns {
                position: relative;
                z-index: 2;
            }
        }
        .router {
            padding-top: 16px;
        }
    }
}

.isMini {
    .layout_navigation {
        .v-list-item__prepend {
            padding-left: 0;
        }
        .v-list-group__items {
            .v-list-item {
                padding-inline-start: 8px !important;
            }
        }

    }
    .app_main {
        margin-left: 108px;
        .header {
            left: 108px;
            width: calc(100vw - 132px);
        }
    }
}
.h_a_menu {
    .v-list-item--density-default.v-list-item--one-line {
        min-height: 36px !important;
    }
    .v-list-item__prepend > .v-icon {
        margin-inline-end: 16px;
    }
}

